--- a/single-portfolio.css
+++ b/single-portfolio.css
@@ -1,7 +1,7 @@
 
 
 body{
-  background: url(../porject-bootstrap.4/img\ \(39\)\ -\ Copy.png);
+  background: url(photo18.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
@@ -368,4 +368,5 @@ flex-direction: column;
     }
  
   
+
   
