--- a/single-portfolio.css
+++ b/single-portfolio.css
@@ -1,7 +1,7 @@
 
 
 body{
-  background: url(photo23.png);
+  background: url(photo24.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
@@ -370,4 +370,5 @@ flex-direction: column;
   
 
   
+
 
